--- a/Code/ShipWorks.ThirdPartyApi/App.config
+++ b/Code/ShipWorks.ThirdPartyApi/App.config
@@ -3,7 +3,7 @@
 
   <configSections>
 
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="ShipWorks.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -46,8 +46,7 @@
   </runtime>
   <applicationSettings>
     <ShipWorks.Properties.Settings>
-      <setting name="ShipWorks_ThirdPartyApi_Shipping_Carriers_FedEx_WebServices_UploadDocument_UploadDocumentService"
-        serializeAs="String">
+      <setting name="ShipWorks_ThirdPartyApi_Shipping_Carriers_FedEx_WebServices_UploadDocument_UploadDocumentService" serializeAs="String">
         <value>https://wsbeta.fedex.com:443/web-services/uploaddocument</value>
       </setting>
     </ShipWorks.Properties.Settings>
