--- a/Code/ShipWorks.UI/ShipWorks.UI.csproj
+++ b/Code/ShipWorks.UI/ShipWorks.UI.csproj
@@ -617,7 +617,9 @@
   <ItemGroup>
     <Resource Include="Resources\disk_blue1.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="Styles\BlueSteel\GroupBoxStyle.xaml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
