--- a/Code/ShipWorks.Core.Tests.Integration/ShipWorks.Core.Tests.Integration.csproj
+++ b/Code/ShipWorks.Core.Tests.Integration/ShipWorks.Core.Tests.Integration.csproj
@@ -20,6 +20,9 @@
     <None Remove="obj\**" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Data\TransactionDtcTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Interapptive.Shared.Tests\Interapptive.Shared.Tests.csproj" />
     <None Remove="AddressValidation\TestAddresses.xlsx" />
   </ItemGroup>
