--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -285,6 +285,7 @@
     <Compile Include="Platforms\Rakuten\Content\RakutenCombineOrderAction.cs" />
     <Compile Include="Platforms\Rakuten\Content\RakutenSplitOrderAction.cs" />
     <Compile Include="Platforms\Rakuten\CoreExtensions\Actions\RakutenShipmentUploadTask.cs" />
+    <Compile Include="Platforms\Rakuten\DTO\RakutenCampaign.cs" />
     <Compile Include="Platforms\Rakuten\DTO\RakutenOptionalCheckoutInfo.cs" />
     <Compile Include="Platforms\Rakuten\DTO\RakutenBaseResponse.cs" />
     <Compile Include="Platforms\Rakuten\DTO\RakutenPayment.cs" />
