TP#35957: Update the order of the wizard pages

--- a/Code/ShipWorks.Stores.UI/ShipWorks.Stores.UI.csproj
+++ b/Code/ShipWorks.Stores.UI/ShipWorks.Stores.UI.csproj
@@ -259,6 +259,12 @@
     <Compile Include="Platforms\ChannelAdvisor\ChannelAdvisorAccountSettingsControl.Designer.cs">
       <DependentUpon>ChannelAdvisorAccountSettingsControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Platforms\ChannelAdvisor\ChannelAdvisorExcludeFbaWizardPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Platforms\ChannelAdvisor\ChannelAdvisorExcludeFbaWizardPage.Designer.cs">
+      <DependentUpon>ChannelAdvisorExcludeFbaWizardPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Platforms\ChannelAdvisor\ChannelAdvisorRestAuthorizationControl.xaml.cs">
       <DependentUpon>ChannelAdvisorRestAuthorizationControl.xaml</DependentUpon>
     </Compile>
@@ -282,6 +288,7 @@
       <DependentUpon>ChannelAdvisorStoreSetupControlHost.cs</DependentUpon>
     </Compile>
     <Compile Include="Platforms\ChannelAdvisor\ChannelAdvisorModule.cs" />
+    <Compile Include="Platforms\ChannelAdvisor\ChannelAdvisorWizardPageFactory.cs" />
     <Compile Include="Platforms\GenericFile\GenericStoreHubControl.xaml.cs">
       <DependentUpon>GenericStoreHubControl.xaml</DependentUpon>
     </Compile>
@@ -654,6 +661,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Platforms\ChannelAdvisor\ChannelAdvisorAccountSettingsControl.resx">
       <DependentUpon>ChannelAdvisorAccountSettingsControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Platforms\ChannelAdvisor\ChannelAdvisorExcludeFbaWizardPage.resx">
+      <DependentUpon>ChannelAdvisorExcludeFbaWizardPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Platforms\ChannelAdvisor\ChannelAdvisorRestAccountSettingsControl.resx">
       <DependentUpon>ChannelAdvisorRestAccountSettingsControl.cs</DependentUpon>
