--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1404,6 +1404,7 @@
     <Compile Include="UI\Controls\SandRibbon\RibbonMenuItem.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="UI\WPF\WPFInterop.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseGetOrdersResponse.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseImportDetails.cs" />
     <Compile Include="Users\IUserManager.cs" />
