--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -326,6 +326,8 @@
     <Compile Include="Layout\OrderLookupLayout.cs" />
     <Compile Include="Layout\OrderLookupLayoutDefaults.cs" />
     <Compile Include="Layout\PanelInfo.cs" />
+    <Compile Include="Messages\OrderLookupShipAgainMessage.cs" />
+    <Compile Include="Messages\ScanToShipShipmentLoadedMessage.cs" />
     <Compile Include="OrderLookupConfirmationService.cs" />
     <Compile Include="OrderLookupOrderIDRetriever.cs" />
     <Compile Include="ScanPack\IScanPackItemFactory.cs" />
@@ -371,7 +373,6 @@
     <Compile Include="OrderLookupPanelFactory.cs" />
     <Compile Include="OrderLookupPreviousShipmentLocator.cs" />
     <Compile Include="OrderLookupRegistrationOverride.cs" />
-    <Compile Include="OrderLookupShipAgainMessage.cs" />
     <Compile Include="OrderLookupShipmentModel.cs" />
     <Compile Include="OrderLookupViewModelBase.cs" />
     <Compile Include="PreviousProcessedShipmentDetails.cs" />
