--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -312,6 +312,7 @@
     <Compile Include="Platforms\Overstock\Warehouse\OverstockWarehouseItem.cs" />
     <Compile Include="Platforms\Overstock\Warehouse\OverstockWarehouseOrder.cs" />
     <Compile Include="Platforms\Overstock\Warehouse\OverstockWarehouseOrderFactory.cs" />
+    <Compile Include="Platforms\Rakuten\Warehouse\RakutenWarehouseStore.cs" />
     <Compile Include="Platforms\ThreeDCart\Warehouse\ThreeDCartStore.cs" />
     <Compile Include="Platforms\Rakuten\DTO\RakutenErrors.cs" />
     <Compile Include="Platforms\Rakuten\DTO\RakutenOrdersResponse.cs" />
@@ -327,7 +328,6 @@
     <Compile Include="Platforms\ThreeDCart\Warehouse\ThreeDCartWarehouseOrder.cs" />
     <Compile Include="Platforms\ThreeDCart\Warehouse\ThreeDCartWarehouseOrderFactory.cs" />
     <Compile Include="Platforms\Rakuten\Warehouse\RakutenStoreDtoFactory.cs" />
-    <Compile Include="Platforms\Rakuten\Warehouse\RakutenWarehouseItem.cs" />
     <Compile Include="Platforms\Rakuten\Warehouse\RakutenWarehouseOrder.cs" />
     <Compile Include="Platforms\Rakuten\Warehouse\RakutenWarehouseOrderFactory.cs" />
     <Compile Include="Platforms\Walmart\WalmartWebClientSettings.cs" />
