--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -364,7 +364,6 @@
     <Compile Include="ScanToShip\ScanToShipControlHost.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ScanToShip\ScanToShipPipeline.cs" />
     <Compile Include="ScanToShip\ScanToShipTab.cs" />
     <Compile Include="ScanToShip\ScanToShipTabItem.cs" />
     <Compile Include="ScanToShip\ScanToShipViewModel.cs" />
@@ -403,7 +402,7 @@
     <Compile Include="IOrderLookupOrderRepository.cs" />
     <Compile Include="OrderLookupAutoPrintService.cs" />
     <Compile Include="OrderLookupOrderRepository.cs" />
-    <Compile Include="OrderLookupSingleScanPipeline.cs" />
+    <Compile Include="ScanToShipPipeline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShipmentHistory\ShipmentHistoryEntityGateway.cs" />
     <Compile Include="ShipmentHistory\ShipmentHistoryHeader.cs" />
