TP#36055: Add carrier images. Create WPFImageSourceAttribute and add it to each carrer in ShipmentTypeCode. Display carrier icon and trackingn number in MainOrderLookupControl when an order has been processed.

--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -576,6 +576,7 @@
     <Compile Include="Utility\TimeSpanExtensions.cs" />
     <Compile Include="Utility\VersionUtility.cs" />
     <Compile Include="Utility\WeightUtility.cs" />
+    <Compile Include="Utility\WpfImageSourceAttribute.cs" />
     <Compile Include="Utility\XmlUtility.cs" />
     <Compile Include="Utility\XPathNamespaceNavigator.cs" />
     <Compile Include="Utility\XPathUtility.cs" />
