--- a/Code/ShipWorks.UI/ShipWorks.UI.csproj
+++ b/Code/ShipWorks.UI/ShipWorks.UI.csproj
@@ -620,6 +620,14 @@
   <ItemGroup>
     <Page Include="Styles\BlueSteel\GroupBoxStyle.xaml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\amazon.png" />
+    <Content Include="Resources\asendia.png" />
+    <Content Include="Resources\dhl.png" />
+    <Content Include="Resources\express1.png" />
+    <Content Include="Resources\endicia.png" />
+    <Content Include="Resources\ontrac.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
