TP#36055: Create ShipmentTypeToImageConverter instead of handling it in the view model.

--- a/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
+++ b/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
@@ -530,6 +530,7 @@
     <Compile Include="ShippingModule.cs" />
     <Compile Include="ShippingRibbon\ShippingRibbonService.cs" />
     <Compile Include="ValueConverters\OriginAddressListConverter.cs" />
+    <Compile Include="ValueConverters\ShipmentTypeToImageConverter.cs" />
     <Compile Include="ValueConverters\ShipmentTypeToOriginAddressesConverter.cs" />
   </ItemGroup>
   <ItemGroup>
