--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -327,6 +327,7 @@
     <Compile Include="Layout\OrderLookupLayoutDefaults.cs" />
     <Compile Include="Layout\PanelInfo.cs" />
     <Compile Include="Messages\OrderLookupShipAgainMessage.cs" />
+    <Compile Include="Messages\OrderLookupVerifyMessage.cs" />
     <Compile Include="Messages\ScanToShipShipmentLoadedMessage.cs" />
     <Compile Include="OrderLookupConfirmationService.cs" />
     <Compile Include="OrderLookupOrderIDRetriever.cs" />
