--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -1009,6 +1009,7 @@
     <Compile Include="Warehouse\IUploadOrdersRequest.cs" />
     <Compile Include="Warehouse\IWarehouseOrderDtoFactory.cs" />
     <Compile Include="Warehouse\StoreData\RakutenStore.cs" />
+    <Compile Include="Warehouse\StoreData\ShipEngineStore.cs" />
     <Compile Include="Warehouse\StoreData\VolusionStore.cs" />
     <Compile Include="Warehouse\UploadOrdersRequest.cs" />
     <Compile Include="Warehouse\WarehouseOrderDtoFactory.cs" />
