--- a/Code/ShipWorks/packages.config
+++ b/Code/ShipWorks/packages.config
@@ -13,6 +13,8 @@
   <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="Microsoft.AnalyzerPowerPack" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net46" />
