TP#36992: Unit tests for HealthCheckController

--- a/Code/ShipWorks.Api.Tests/ShipWorks.Api.Tests.csproj
+++ b/Code/ShipWorks.Api.Tests/ShipWorks.Api.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -21,6 +21,9 @@
     <EmbeddedResource Include="**/*.json;**/*.js;**/*.xml" />
     <EmbeddedResource Remove="obj\**" />
     <None Remove="obj\**" />
+    <Compile Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
   </ItemGroup>
    <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.2" />
