TP#36994 create IApiOrderRepository

--- a/Code/ShipWorks.Api/ShipWorks.Api.csproj
+++ b/Code/ShipWorks.Api/ShipWorks.Api.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interapptive.Shared\Interapptive.Shared.csproj" />
+    <ProjectReference Include="..\ShipWorks.Data.Model\ShipWorks.Data.Model.csproj" />
     <ProjectReference Include="..\ShipWorks\ShipWorks.Core.csproj" />
   </ItemGroup>
 </Project>
