TP#36994 create ApiOrderRepository

--- a/Code/ShipWorks.Api/ShipWorks.Api.csproj
+++ b/Code/ShipWorks.Api/ShipWorks.Api.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="Autofac.WebApi2" Version="4.0.0" />
     <PackageReference Include="Autofac.WebApi2.Owin" Version="4.0.0" />
     <PackageReference Include="log4net" Version="2.0.7" />
+    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.1.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.7" />
